--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="row">
         <div class="col" style="text-align: center;">
-            <button id="newcrew" type="button" onclick="populate()">Add a Crew</button>
+            <button id="newcrew" type="button" onclick="addCrew()">Add a Crew</button>
         </div>
     </div>
 
@@ -34,6 +34,7 @@
     </div>
     <div style="text-align: center; margin-bottom: 1%;">
         <button>Add a Match</button>
+        <button onclick="addPlayer()">Add New Player</button>
     </div>
     <div class="row">
         <!-- Crew 1 Player (Left Side) -->
