Added all characters up to Joker DLC

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Crew Battle Scorekeeper</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
@@ -45,7 +45,7 @@
                 </select>
             </div>
         </div>
-        <div class="col-1" style="text-align: right;">
+        <div class="col-2" style="text-align: right;">
             <label style="vertical-align: top;" for="select_char">Character</label>
             <div>
                 <select id="select_char" name="select_char">
@@ -69,7 +69,7 @@
             </div>
         </div>
         <!-- Crew 2 Player (Right Side) -->
-        <div class="col-1" style="text-align: left">
+        <div class="col-2" style="text-align: left">
             <label style="vertical-align: top;" for="select_char">Character</label>
             <div>
                 <select id="select_char" name="select_char">
