Populate character Dropdown list

--- a/index.html
+++ b/index.html
@@ -46,11 +46,9 @@
             </div>
         </div>
         <div class="col-2" style="text-align: right;">
-            <label style="vertical-align: top;" for="select_char">Character</label>
+            <label style="vertical-align: top;" for="select_char1">Character</label>
             <div>
-                <select id="select_char" name="select_char">
-                    <option>Roy</option>
-                    <option>Fox</option>
+                <select id="select_char1" name="select_char1">
                 </select>
             </div>
         </div>
@@ -70,11 +68,9 @@
         </div>
         <!-- Crew 2 Player (Right Side) -->
         <div class="col-2" style="text-align: left">
-            <label style="vertical-align: top;" for="select_char">Character</label>
+            <label style="vertical-align: top;" for="select_char2">Character</label>
             <div>
-                <select id="select_char" name="select_char">
-                    <option>Roy</option>
-                    <option>Fox</option>
+                <select id="select_char2" name="select_char2">
                 </select>
             </div>
         </div>
