--- a/newcrew.html
+++ b/newcrew.html
@@ -7,5 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body style="background: white;">
+    <input id="newcrew" placeholder="Enter crew name...">
+    <button onclick="submitCrew()">Submit Crew</button>
 </body>
 </html>
+<script src="functions.js"></script>
