Clickable character image to change alt

--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
                 </select>
             </div>
         </div>
+        <div class="col-2" style="text-align: right;"> 
+            <img src="Resources\CharacterIcons\Bayonetta\chara_2_bayonetta_00_1.png" onclick="changeAlt()"></img>
+        </div>
+        <div class="col-2" style="text-align: left;"> 
+            <img src="Resources\CharacterIcons\Bayonetta\chara_2_bayonetta_00_1.png" onclick="changeAlt()"></img>
+        </div
         <div class="col" style="text-align: left">
             <label style="vertical-align: top;" for="select_char2">Character</label>
             <div>
@@ -92,7 +98,6 @@
     <div style="text-align: center;">
         <button>Submit Changes</button>
     </div>
-
 </body>
 </html>
 <script src="functions.js"></script>
