Populates mario alts on button click

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="col-2" style="text-align: left;"> 
             <img src="Resources\CharacterIcons\Bayonetta\chara_2_bayonetta_00_1.png" onclick="changeAlt()"></img>
-        </div
+        </div>
         <div class="col" style="text-align: left">
             <label style="vertical-align: top;" for="select_char2">Character</label>
             <div>
