--- a/changealt.html
+++ b/changealt.html
@@ -6,8 +6,9 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
-<body style="background: white;">
+<body style="background: white;" id="bodyalt">
     <h3>This is where you will change your character's alt</h3>
+    <button onclick="getPaths()">Click</button>
 </body>
 </html>
 <script src="functions.js"></script>
