Display image of alts for specified character

--- a/changealt.html
+++ b/changealt.html
@@ -8,7 +8,12 @@
 </head>
 <body style="background: white;" id="bodyalt">
     <h3>This is where you will change your character's alt</h3>
-    <button onclick="getPaths()">Click</button>
+    <select id='charlist_alt'></select>
+    <button onclick="getAlts()">Click</button>
+    <div class="row" id="img_list"></div>
 </body>
 </html>
 <script src="functions.js"></script>
+<script>
+charListAlts()
+</script>
