--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="col-2" style="text-align: right;"> 
-            <img src="Resources\CharacterIcons\Bayonetta\chara_2_bayonetta_00_1.png" onclick="changeAlt()"></img>
+            <img id="p1_char_img" src="Resources\CharacterIcons\Bayonetta\chara_2_bayonetta_00_1.png" onclick="changeAlt()"></img>
         </div>
         <div class="col-2" style="text-align: left;"> 
             <img src="Resources\CharacterIcons\Bayonetta\chara_2_bayonetta_00_1.png" onclick="changeAlt()"></img>
@@ -103,4 +103,9 @@
 <script src="functions.js"></script>
 <script>
 populate();
+const { ipcRenderer } = require('electron').ipcRenderer
+ipcRenderer.on('alt-change', (event, arg) => {
+    console.log(arg); 
+    updateAlt(arg);
+});
 </script>
